<resources>
    <string name="app_name">VentSell</string>

    <string name="drawer_header_text">VentSell</string>

    <!--Main activity tab titles-->
    <string name="events_tab_title_text">Events</string>

    <string name="event_name_textview_text">Event Title</string>
    <string name="event_description_textview_text">Event Description</string>
    <string name="event_image_content_description">Event Image</string>
    <string name="location_textview_text">Location</string>
    <string name="category_textview_text">Category</string>
    <string name="date_textview_text">Date</string>
    <string name="to_go_textview_text">To go</string>
    <string name="amount_textview_text">Amount</string>
    <string name="msg_default_status">Scan your e-ticket</string>
    <string name="menu_share">Share</string>
    <string name="drawer_item_history">Scan History</string>
    <string name="drawer_item_scan_settings">Scan Settings</string>
    <string name="drawer_item_account_settings">Account Settings</string>
    <string name="drawer_item_logout">Logout</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: ticket scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="msg_encode_contents_failed">Could not encode a ticket from the data provided.</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The ticket contents may be invalid.</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Ticket Scanner history</string>
    <string name="button_cancel">Cancel</string>
    <string name="history_send">Send history</string>
    <string name="history_clear_text">Clear history</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="preferences_actions_title">When a Ticket is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_bulk_mode_summary">Scan and save many tickets continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_ticket_scene_mode_title">No ticket scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_history_summary">Store your scans in History</string>
    <string name="preferences_history_title">Add to History</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white tickets on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_orientation_title">No automatic rotation</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same ticket in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="history_title">History</string>
    <string name="history_empty_text">No ticket scans recorded</string>
    <string name="drawer_item_home_page">Home</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Your Email Address</string>
    <string name="prompt_password">Your Password</string>
    <string name="sign_in_sign_up_text">log in or Sign up</string>
    <string name="login_text_sign_in_short">Sign in</string>
    <string name="login_text_next_field_short">Next</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale_contacts">"Contacts permissions are needed for providing email completions."</string>
    <string name="permission_rationale_Accounts">"Accounts permissions are needed for providing email completions."</string>
    <string name="permission_rationale_internet">"Internet permissions are needed to login</string>
    <string name="login_background_image">Login Background Image</string>
    <string name="drawer_item_preferences">Preferences</string>
    <string name="drawer_item_account">Account</string>

    <string name="facebook_app_id">727864240704264</string>
    <string name="fb_login_protocol_scheme">fb727864240704264</string>

    <string name="label">Ventsell</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="full_name_text">Full Name</string>
    <string name="sign_in_with_your_account_text">Or sign in with your account</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="terms_email_use_notice">We may use your email for updates and tips on Ventsell’s products and services. You can unsubscribe for free at any time in your notification preferences.</string>
    <string name="terms_reminder">By signing in, you agree to our Terms of use.</string>
    <string name="create_an_account_text">Create an account</string>
    <string name="empty_events_text">You currently have no paid events</string>
    <string name="loading_paid_events_text">Loading paid events…</string>
    <string name="ventsell_base_url">https://ventsell.com/</string>
    <string name="authenticate_url">https://ventsell.com/en/account-567643/password-recovery</string>
    <string name="terms_and_conditions_url">https://ventsell.com/en/terms-and-conditions</string>
    <string name="terms_and_create_account_url">https://ventsell.com/en/authenticate</string>
    <string name="enter_code_text">Enter ticket id here</string>
    <string name="new_user_dialog_positive_button">YES</string>
    <string name="new_user_dialog_negative_button">NO</string>
    <string name="user_image_description">user image description</string>
    <string name="history_header_image_description">history image header</string>
    <string name="checked_out_text">Checked Out</string>
    <string name="checked_out_image_description">Checked out image</string>
    <string name="invalid_ticket_text">Invalid</string>
    <string name="welcome_ventsell_text">Ventsell.</string>
    <string name="welcome_message_text">Manage your events with ease, it\'s simple. Scan, check-in, and go</string>
    <string name="sign_in_text">Sign In</string>

    <string name="history_ticket_id_text">Ticket ID</string>
    <string name="history_scan_time_text">0s</string>
    <string name="history_ticket_details_text">No details</string>
    <string name="title_activity_account_settings">Account Settings</string>
    <string name="insights_background_desc">Insights background</string>
</resources>
