<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        tools:context="com.ventsell.ventsellorganiser.authenticate.AuthenticateActivity">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/login_background_image"
            android:scaleType="centerCrop"
            android:src="@drawable/img_login_bg_dark" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingBottom="64dp">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="38dp"/>

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/facebook_sign_in_button"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginStart="24dp"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/sign_in_with_your_account_text" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/login_view_bg"
                    android:padding="8dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Light">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/full_name_display"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:paddingBottom="16dp"
                        android:paddingTop="8dp"
                        android:text="@string/email_text" />

                    <AutoCompleteTextView
                        android:id="@+id/full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/full_name_display"
                        android:layout_margin="4dp"
                        android:layout_toEndOf="@+id/full_name_display"
                        android:layout_toRightOf="@+id/full_name_display"
                        android:background="@null"
                        android:hint="@string/prompt_email"
                        android:imeActionId="@integer/next_field"
                        android:imeActionLabel="@string/login_text_next_field_short"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/full_name_display"
                        android:background="#424242" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/password_display"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/full_name_display"
                        android:paddingTop="16dp"
                        android:text="@string/password_text" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/password_display"
                        android:layout_margin="4dp"
                        android:layout_toEndOf="@+id/password_display"
                        android:layout_toRightOf="@+id/password_display"
                        android:background="@null"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@integer/login"
                        android:imeActionLabel="@string/login_text_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </RelativeLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/email_sign_in_button"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_sign_up_text"
                    app:backgroundTint="@color/colorPrimaryDark" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/forgot_password"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="@string/forgot_password_text" />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/terms_email_use_notice" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/terms_of_use"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingBottom="16dp"
                    android:paddingEnd="24dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingStart="24dp"
                    android:paddingTop="16dp"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="@string/terms_reminder" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </FrameLayout>

</LinearLayout>