<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:id="@+id/history_list_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:longClickable="true"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:id="@+id/first_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/history_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:text="@string/history_ticket_id_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <TextView
                android:id="@+id/history_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:text="@string/history_scan_time_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
        </LinearLayout>

        <TextView
            android:id="@+id/history_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:text="@string/history_ticket_details_text"
            android:layout_below="@+id/first_linear_layout"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </RelativeLayout>

</android.support.v7.widget.CardView>

